# GeoScope

./: LICENSE  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: countries.py  events.py  metrics.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/db/models/: country.py
backend/app/ingestion/: clean_data.py  fetch_data.py  update.py
backend/app/schemas/: schema.py
backend/app/services/: analytics_service.py  event_service.py  ingestion_service.py
backend/app/utils/: utils.py
docs/: geospace.yml
frontend/: README.md
frontend/src/: App.tsx
