[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "black>=26.3.1",
    "fastapi>=0.136.1",
    "isort>=8.0.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
